# ESKF_rov_tracking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: export_fgo_groundtruth_csv.py  export_fgo_rosbag_mcap.py
src/: .plotting.py  .tuning_real.py  asv_sensors.py  asv_states.py  config.py  eskf.py  eskf_joint.py  main.py  measurements.py  models.py  models_joint.py  plotting.py  quaternion.py  rov_sensors.py  rov_states.py  run_scenarios.py  sensors.py  states.py  tuning_real.py  tuning_sim.py
src/senfuslib/: timesequence.py
src/tracking_and_navigation/: eskf.py  generate_measurements.py  generate_trajectories.py  measurements.py  models.py  plotting.py  run_eskf.py  run_simulations.py  sensors.py  states.py  tuning_sim.py
src/tracking_only/: asv_sensors.py  asv_states.py  eskf.py  generate_measurements.py  generate_trajectory.py  measurements.py  models.py  plotting.py  rov_sensors.py  rov_states.py  run_eskf.py  run_scenarios.py  run_simulations.py  sensors.py  states.py  tuning_sim.py
src/utils/: .dataloader.py  angles.py  dataloader.py  generate_measurements.py  generate_trajectory.py  plotting.py  withXYZ.py
